# auto-dix

./: .gitmodules  Makefile  README.md  auto-dix.obuild  auto-dix.opam  auto.ml  auto.mli  autotools.ml  aux.ml  bsgs,mli  bsgs.ml  bsgs.mli  build.sh  canonical.ml  clean.sh  dot.sh  graph.ml  graph.mli  graphSig.ml  graphSig.mli  group.ml  group.mli  main.ml  make.sh  makeprof.sh  perm.ml  perm.mli  prelude.ml  prelude.mli  test.sh  tests.ml
lib/: .merlin  auto_dix.ml  autotools.ml  canonical.ml  jbuild
test/: .merlin  fresh.ml  jbuild  tests.ml
