opam-version: "1.2"
maintainer: "ilias.gar@gmail.com"
authors: ["Ilias Garnier"]
homepage: "https://github.com/igarnier/auto-dix"
bug-reports: "https://github.com/igarnier/auto-dix/issues"
dev-repo: "git+https://github.com/igarnier/auto-dix.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder"                {build & >= "1.0+beta8"}
  "permgroup"
  "ocamlgraph"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Storing and accessing permutation groups with the Screier-Sims algorithm.
"